hphp/test/zend/good/ext/sockets/tests/socket_select.php
<?php
$sockets = array();
if (strtolower(substr(PHP_OS, 0, 3)) == 'win') {
    $domain = AF_INET;
} else {
    $domain = AF_UNIX;
}
socket_create_pair($domain, SOCK_STREAM, 0, $sockets);

$write  = null;
$except = null;
var_dump(socket_select($sockets, $write, $except, 0));