hphp/test/zend/bad/ext/sockets/tests/socket_select-wrongparams-1-win32.php
<?php
$sockets = array();
$domain = AF_INET;
socket_create_pair($domain, SOCK_STREAM, 0, $sockets);

$write  = null;
$except = null;
$time   = -1;
var_dump(socket_select($sockets, $write, $except, $time));